--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,23 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --colorText: #eee;
+  --background: #171717;
+  --fondo: linear-gradient(180deg, rgba(36, 36, 36, 1) 0%, rgba(14, 14, 14, 1) 100%);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  height: 100vh;
+  background: var(--fondo);
+  color: var(--colorText);
+  text-decoration: none;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+a {
+  color: var(--colorText);
+  text-decoration: none;
 }
